# swe30003

./: .gitignore  README.md
backend/: database.db  main.py  models.py  pyproject.toml  requirements.txt
backend/app/: auth.py  db.py  domain.py  main.py  persistence.py  restaurant_api.sqlite3  schemas.py  store.py
backend/app/router/: branches.py  customers.py  menu.py  orders.py  staffs.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.tsx  Checkout.tsx  Login.tsx  Register.tsx  UserPortal.jsx  api.js  helpers.ts  index.css  main.jsx  main.tsx  schemas.ts  styles.css  utils.ts
frontend/src/components/: Admin.tsx  Admin.tsx.py  Login.tsx  NavBar.tsx  Shop.tsx
